Adding a heap o' story candidates...

--- a/newsletter/2021-07-04.html
+++ b/newsletter/2021-07-04.html
@@ -4,13 +4,50 @@
 
   Some story candidates for next newsletter...
 
-  - Options are expanding for ETH developers. New Telos EVM + recent Polygon intvu. https://unchainedpodcast.com/polygon-the-layer-2-solution-doing-8-times-as-many-transactions-a-day-as-ethereum/
+  
+
+  - Options are expanding for ETH developers. New Telos EVM + recent Polygon intvu. https://unchainedpodcast.com/polygon-the-layer-2-solution-doing-8-times-as-many-transactions-a-day-as-ethereum/ | https://t.me/TelosEVMDevs | Read More Right pointing backhand index http://ow.ly/cLPP50Fja9A
+About Telos EVM Right pointing backhand index http://ow.ly/cRTe50Fja9z
+
+  - BTC's hashrate hit a one-year low: https://www.coindesk.com/bitcoin-mining-hashrate-drops-low
+
+  - 650 U.S. banks will soon be able to offer bitcoin purchases to an estimated 24 million total customers. https://www.forbes.com/sites/michaeldelcastillo/2021/06/30/6-billion-ncr-opens-bitcoin-purchases-to-650-banks-and-credit-unions/?sh=3d3fa3613f82
+
+  - Jack Mallers’ Strike Rolls Out Bitcoin Buys, Going Head-to-Head With Coinbase. https://www.coindesk.com/jack-mallers-strike-bitcoin-zap-prime-trust
+
+  - Visa announced a bunch of crypto hires. https://twitter.com/cuysheffield/status/1409900425407471616
+
+  - The number of active BTC addresses is at its lowest level since April 2020. https://www.coindesk.com/bitcoin-active-addresses-lowest-since-2020
+
+  - Soros Fund Management has reportedly begun trading btc. https://www.coindesk.com/soros-fund-management-is-said-to-be-trading-bitcoin-report
+
+  - FINRA action vs Robinhood. https://www.finra.org/media-center/newsreleases/2021/finra-orders-record-financial-penalties-against-robinhood-financial
+ 
+  - TP ICAP, the world's largest interdealer broker, is partnering with Fidelity to expand crypto trading for institutional clients. https://www.theblockcrypto.com/post/109952/tp-icap-crypto-trading-platform-fidelity-standard-chartered-flow-traders
 
   - Followup on missing south african entrepreneurs. (Need link)
 
   - Coinbase introduced a new product with 4% interest on USDC deposits. https://www.coindesk.com/coinbase-debuts-savings-product-with-4-apy-on-usdc-deposits
 
   - DeFi meets AI in new project by Fetch.ai. https://www.coindesk.com/fetch-ai-launches-intelligent-automation-for-uniswap-v2-and-pancakeswap
+
+  - Banco Azteca is looking to become the first Mexican bank to accept bitcoin. https://decrypt.co/74600/billionaire-salinas-wants-to-make-mexicos-first-bitcoin-accepting-bank
+
+  - El Salvador is handing out up to $117 million in Bitcoin to its citizens. https://www.theblockcrypto.com/post/109603/el-salvador-is-handing-out-up-to-117-million-in-bitcoin-to-its-citizens
+
+  - Tidal is exploring possible use of NFTs as a way to compensate musicians. https://www.theblockcrypto.com/linked/109903/tidal-interested-nft-jack-dorsey-shawn-carter-jay-z
+
+  - RobinHood is planning an IPO. https://www.theblockcrypto.com/linked/109640/sec-robinhood-ipo-delay-crypto-business | 
+
+  - Crypto investment in India rose 19,900%. Wowza. https://decrypt.co/74630/crypto-investments-in-india-skyrocket-by-19900-in-one-year
+
+  - The Fed's Rosengren is worried about stablecoins. https://www.coindesk.com/us-fed-official-calls-tether-a-challenge-to-financial-stability
+
+  - Musk and Dorsey will discuss bitcoin publicly at a July 21 event. Yay. https://bitcoinmagazine.com/industry-events/elon-musk-jack-dorsey-at-b-word
+
+  - UK regulators are blocking Binance from doing business there. https://decrypt.co/74608/binance-not-permitted-to-operate-in-the-uk-british-financial-watchdog
+
+  - Bitcoin mining is poised to get way easier. https://www.theblockcrypto.com/post/109752/bitcoin-mining-difficulty-record-drop-china-miners
 
   - American football legend Tom Brady and his wife Gisele Bündchen invested in crypto exchange FTX. https://coindesk.com/tom-brady-gisele-bundchen-become-part-owners-of-ftx
 
@@ -34,7 +71,15 @@
 
   - A good rundown/update of the Quadriga mess: https://www.coindesk.com/gerald-cotten-quadriga-serial-grifter
 
+  - A new analyst report from JP Morgan projected that ETH 2.0 rollout could spur a $40B staking industry. https://t.co/TvnOxxytGF?amp=1
+
+  - Update on Berners-Lee's NFT sale. https://t.co/X9l2b5IQPc?amp=1 | https://www.theblockcrypto.com/linked/110158/nft-of-the-original-world-wide-web-code-fetches-5-4-million-at-sothebys-auction
+
+  - Coinbase is looking to launch a blockchain app store. https://blog.coinbase.com/embracing-decentralization-at-coinbase-7fa0e5d1084b
+
   - Update on China's CBDC and its privacy implications: https://www.coindesk.com/power-privacy-and-chinas-digital-currency
+
+  - Finally! An AI-powered robot that delivers beer. https://t.co/3RMyUoaDNG?amp=1
 
   -->
 
