Final copy for 4 July 2021

--- a/newsletter/2021-07-04.html
+++ b/newsletter/2021-07-04.html
@@ -1,88 +1,5 @@
 <doctype html>
 
-  <!--
-
-  Some story candidates for next newsletter...
-
-  
-
-  - Options are expanding for ETH developers. New Telos EVM + recent Polygon intvu. https://unchainedpodcast.com/polygon-the-layer-2-solution-doing-8-times-as-many-transactions-a-day-as-ethereum/ | https://t.me/TelosEVMDevs | Read More Right pointing backhand index http://ow.ly/cLPP50Fja9A
-About Telos EVM Right pointing backhand index http://ow.ly/cRTe50Fja9z
-
-  - BTC's hashrate hit a one-year low: https://www.coindesk.com/bitcoin-mining-hashrate-drops-low
-
-  - 650 U.S. banks will soon be able to offer bitcoin purchases to an estimated 24 million total customers. https://www.forbes.com/sites/michaeldelcastillo/2021/06/30/6-billion-ncr-opens-bitcoin-purchases-to-650-banks-and-credit-unions/?sh=3d3fa3613f82
-
-  - Jack Mallers’ Strike Rolls Out Bitcoin Buys, Going Head-to-Head With Coinbase. https://www.coindesk.com/jack-mallers-strike-bitcoin-zap-prime-trust
-
-  - Visa announced a bunch of crypto hires. https://twitter.com/cuysheffield/status/1409900425407471616
-
-  - The number of active BTC addresses is at its lowest level since April 2020. https://www.coindesk.com/bitcoin-active-addresses-lowest-since-2020
-
-  - Soros Fund Management has reportedly begun trading btc. https://www.coindesk.com/soros-fund-management-is-said-to-be-trading-bitcoin-report
-
-  - FINRA action vs Robinhood. https://www.finra.org/media-center/newsreleases/2021/finra-orders-record-financial-penalties-against-robinhood-financial
- 
-  - TP ICAP, the world's largest interdealer broker, is partnering with Fidelity to expand crypto trading for institutional clients. https://www.theblockcrypto.com/post/109952/tp-icap-crypto-trading-platform-fidelity-standard-chartered-flow-traders
-
-  - Followup on missing south african entrepreneurs. (Need link)
-
-  - Coinbase introduced a new product with 4% interest on USDC deposits. https://www.coindesk.com/coinbase-debuts-savings-product-with-4-apy-on-usdc-deposits
-
-  - DeFi meets AI in new project by Fetch.ai. https://www.coindesk.com/fetch-ai-launches-intelligent-automation-for-uniswap-v2-and-pancakeswap
-
-  - Banco Azteca is looking to become the first Mexican bank to accept bitcoin. https://decrypt.co/74600/billionaire-salinas-wants-to-make-mexicos-first-bitcoin-accepting-bank
-
-  - El Salvador is handing out up to $117 million in Bitcoin to its citizens. https://www.theblockcrypto.com/post/109603/el-salvador-is-handing-out-up-to-117-million-in-bitcoin-to-its-citizens
-
-  - Tidal is exploring possible use of NFTs as a way to compensate musicians. https://www.theblockcrypto.com/linked/109903/tidal-interested-nft-jack-dorsey-shawn-carter-jay-z
-
-  - RobinHood is planning an IPO. https://www.theblockcrypto.com/linked/109640/sec-robinhood-ipo-delay-crypto-business | 
-
-  - Crypto investment in India rose 19,900%. Wowza. https://decrypt.co/74630/crypto-investments-in-india-skyrocket-by-19900-in-one-year
-
-  - The Fed's Rosengren is worried about stablecoins. https://www.coindesk.com/us-fed-official-calls-tether-a-challenge-to-financial-stability
-
-  - Musk and Dorsey will discuss bitcoin publicly at a July 21 event. Yay. https://bitcoinmagazine.com/industry-events/elon-musk-jack-dorsey-at-b-word
-
-  - UK regulators are blocking Binance from doing business there. https://decrypt.co/74608/binance-not-permitted-to-operate-in-the-uk-british-financial-watchdog
-
-  - Bitcoin mining is poised to get way easier. https://www.theblockcrypto.com/post/109752/bitcoin-mining-difficulty-record-drop-china-miners
-
-  - American football legend Tom Brady and his wife Gisele Bündchen invested in crypto exchange FTX. https://coindesk.com/tom-brady-gisele-bundchen-become-part-owners-of-ftx
-
-  - The startup Worldchain wants to distribute crypto to everyone on earth by scanning their eyeballs. https://www.coindesk.com/a16z-coinbase-backed-startup-looks-to-distribute-crypto-to-everyone-on-earth-by-scanning-their-eyeballs-report
-
-  - <li><strong>Millennial millionaires have a large share of their wealth in crypto, CNBC survey says</strong><!-- https://www.cnbc.com/2021/06/10/millennial-millionaires-have-large-share-of-wealth-in-crypto-cnbc-survey-.html </li>
-
-  - <li><strong>Nicholas Nassim Taleb has done a 180 on bitcoin. </strong><!-- https://www.coindesk.com/nassim-taleb-bitcoin </li>
-
-  - <li><strong>America's latest "Most Wanted" list includes several crypto fraudsters.</strong><!-- https://decrypt.co/74440/us-secret-services-most-wanted-list-includes-several-crypto-fraudsters </li>
-
-  - FB crosses $1T valuation. (Need link)
-
-  - China's crackdown on bitcoin miners has been a boon to other countries that want to build up the industry locally. https://www.coindesk.com/chinas-bitcoin-mining-crackdown-is-a-boon-for-miners-elsewhere | Hashrate has been stabilizing. https://www.coindesk.com/bitcoin-hashrate-stabilizes
-
-  - USDC could soon expand to 10 additional blockchains. https://www.coindesk.com/usdc-stablecoin-could-soon-expand-to-10-more-blockchains
-
-  - Pop star Katy Perry is launching her own NFT's + becoming an investor in Theta Labs. https://www.coindesk.com/katy-perry-launches-nfts-acquires-stake-in-theta-labs
-
-  - Complains against crypto exchanges are on the rise in the US. https://www.coindesk.com/crypto-exchange-binance-us-kraken-coinbase
-
-  - A good rundown/update of the Quadriga mess: https://www.coindesk.com/gerald-cotten-quadriga-serial-grifter
-
-  - A new analyst report from JP Morgan projected that ETH 2.0 rollout could spur a $40B staking industry. https://t.co/TvnOxxytGF?amp=1
-
-  - Update on Berners-Lee's NFT sale. https://t.co/X9l2b5IQPc?amp=1 | https://www.theblockcrypto.com/linked/110158/nft-of-the-original-world-wide-web-code-fetches-5-4-million-at-sothebys-auction
-
-  - Coinbase is looking to launch a blockchain app store. https://blog.coinbase.com/embracing-decentralization-at-coinbase-7fa0e5d1084b
-
-  - Update on China's CBDC and its privacy implications: https://www.coindesk.com/power-privacy-and-chinas-digital-currency
-
-  - Finally! An AI-powered robot that delivers beer. https://t.co/3RMyUoaDNG?amp=1
-
-  -->
-
 <html lang="en">
 
   <head>
@@ -148,13 +65,53 @@ About Telos EVM Right pointing backhand index http://ow.ly/cRTe50Fja9z
 
         <br>
 
-        <p>The latest headlines about decentralization:</p>
+        <p><strong>As it's Independence Day here in the U.S.,</strong> I'll skate a little closer to the topic of politics than usual. (Hopefully without falling in up to my neck.)</p>
+
+        <p>Once you get past the surface-level imagery of sparklers and backyard cookouts, July 4 is an inherently political holiday. It celebrates a very <em>particular</em> sort of independence -- that of one nation-state from another's <a href="https://en.wikipedia.org/wiki/British_America">colonial rule</a>.</p>
+
+        <p>That said, I believe July 4 is also a good time to think about independence in the <a href="https://www.oxfordlearnersdictionaries.com/definition/american_english/independence">dictionary sense</a> of the term as well. Independence is a powerful word in general, a noun closely tied to other potent ones like freedom, agency, democracy, prerogative, and liberty.</p>
+
+        <p>Further, the independence of nation-states and that of individuals is tied closely together. A person who lives under the thumb of an oppressive nation-state isn't truly independent or free. Likewise, a nation-state will never fully value people's independence as individuals if they've <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.Pwg2pVAJIpff6cAAgftVCAHaEK%26pid%3DApi&f=1">given up</a> on it themselves as a shared value.</p>
+
+        <p>Unfortunately, I believe the latter scenario increasingly describes the U.S. and many of its closest allies internationally. <a href="https://www.youtube.com/watch?v=pF-Tdsvk0tI">Democratic backsliding</a> is a real problem and still extremely dangerous in 2021.</p>
+
+        <p>Which brings us to the more typical subject matter of this newsletter. If there is to be hope right now for real independence and freedom for people, I'm increasingly skeptical it lies with any nation-state or its government. Better to place that hope in the relentless progress of technology and economics, in innovation and self-forming communities, shaped by our shared values over time.</p>
+
+        <p>This is a bottom-up fight, not a top-down one.</p>
+
+        <p>On to some headlines:</p>
 
         <ul>
 
-          <li><strong></strong><!-- TK --></li>
-          <li><strong></strong><!-- TK --></li>
-          <li><strong></strong><!-- TK --></li>
+          <li><strong>Coinbase is looking to launch a blockchain-based app store.</strong> That was one of several tantalizing takeaways from a <a href="https://blog.coinbase.com/embracing-decentralization-at-coinbase-7fa0e5d1084b">comprehensive update</a> by chief executive Brian Armstrong about his vision of decentralization. Definitely worth a read in full.</li>
+
+
+
+            <li><strong>Bitcoin made a partial comeback.</strong> After a recent market drubbing, the token posted a weekly gain of 7%, trading above above $35,000 as of Sunday morning. Signs are mounting that China's crackdown on bitcoin miners has been a <a href="https://www.coindesk.com/chinas-bitcoin-mining-crackdown-is-a-boon-for-miners-elsewhere">boon to other countries</a> that want to build up the industry locally. That said, the Bitcoin network's hashrate, or pace of minting new bitcoins, is <a href="https://www.coindesk.com/bitcoin-mining-hashrate-drops-low">still flagging</a> for now, as is the number of <a href="https://www.coindesk.com/bitcoin-active-addresses-lowest-since-2020">active wallets</a>. Meanwhile, big institutions from the world of conventional finance like <a href="https://www.coindesk.com/soros-fund-management-is-said-to-be-trading-bitcoin-report">Soros Fund Management</a>, Mexico's <a href="https://decrypt.co/74600/billionaire-salinas-wants-to-make-mexicos-first-bitcoin-accepting-bank">Banco Azteca</a>, and the massive interdealer brokerage <a href="https://cointelegraph.com/news/icap-to-launch-bitcoin-exchange-with-fidelity-standard-chartered">TP ICAP</a> are continuing to increase their exposure. And El Salvador, which recently recognized bitcoin as legal tender, said it will <a href="https://www.theblockcrypto.com/post/109603/el-salvador-is-handing-out-up-to-117-million-in-bitcoin-to-its-citizens">airdrop $117 million</a> of the token, or about to $30 per citizen, to users of a new official crypto wallet. Salvadoran users will also be able to use other wallets in the country's new bitcoin economy if they wish.</li>
+
+
+
+            <li><strong>Visa</strong> has been on a <a href="https://twitter.com/cuysheffield/status/1409900425407471616">hiring spree</a> for its crypto business unit.</li>
+
+
+
+          <li><strong>The music service Tidal</strong> is exploring the potential of non-fungible tokens (NFTs) as an option to <a href="https://www.theblockcrypto.com/linked/109903/tidal-interested-nft-jack-dorsey-shawn-carter-jay-z">compensate creators</a>.</li>
+
+          <li><strong>Sir Tim Berners-Lee</strong> sold an autographed copy of the code he wrote to create the Worldwide Web as an NFT for $5.4 million. He'll donate the proceeds to charity, Wired <a href="https://t.co/X9l2b5IQPc?amp=1">reports</a>. <!-- Update on Berners-Lee's NFT sale. https://t.co/X9l2b5IQPc?amp=1 | https://www.theblockcrypto.com/linked/110158/nft-of-the-original-world-wide-web-code-fetches-5-4-million-at-sothebys-auction --></li>
+
+
+          <li><strong>China flexed its big lead in "smart city" technology.</strong> Entrants from the country <a href="https://www.wired.com/story/global-smart-city-competition-highlights-china-rise-ai/">swept all five categories</a> in the latest AI City Challenge, an international competition designed to encourage and highlight development of artificial intelligence for managing everyday urban logistics like traffic flow, power usage, and more.</li>
+
+          <li><strong>Crypto investment in India is soaring</strong>, up 19,900% over the 12-month period through May, <a href="https://www.bloomberg.com/news/articles/2021-06-28/even-gold-obsessed-indians-are-now-pouring-billions-into-crypto">according to Bloomberg News</a>.</li>
+
+
+          <li><strong>The startup Worldcoin</strong> wants to distribute crypto to everyone on earth by <a href="https://www.coindesk.com/a16z-coinbase-backed-startup-looks-to-distribute-crypto-to-everyone-on-earth-by-scanning-their-eyeballs-report">scanning their eyeballs</a>. Hmmm...</li>
+
+          <li><strong>The USDC stablecoin</strong> could soon expand to <a href="https://www.coindesk.com/usdc-stablecoin-could-soon-expand-to-10-more-blockchains">10 additional blockchains</a>.</li>
+
+          <li><strong>Celebrities ❤️ crypto.</strong> American football legend Tom Brady and his wife, supermodel Gisele Bündchen, <a href="https://coindesk.com/tom-brady-gisele-bundchen-become-part-owners-of-ftx">invested</a> in crypto exchange FTX. Meanwhile pop star pop star Katy Perry is <a href="https://www.coindesk.com/katy-perry-launches-nfts-acquires-stake-in-theta-labs">launching</a> her own NFTs and investing in Theta Labs.</li>
+
+          <li><strong>Finally!</strong> An AI-powered robot that <a href="https://t.co/3RMyUoaDNG?amp=1">delivers beer</a>. Next year's Nobel Prize nominations are still open, right?</li>
 
         </ul>
 
