Adding some story candidates...

--- a/newsletter/2021-07-11.html
+++ b/newsletter/2021-07-11.html
@@ -11,11 +11,49 @@
 
   - Authorities accused a YouTuber with engineering a multi-million-dollar pump-and-dump scheme via Uniswap. https://cointelegraph.com/news/youtuber-accused-of-engineering-multi-million-pump-n-dump-via-uniswap
 
-  - TK
+  - Visa said its customers did over $1B in transactions on crypto-linked cards in 1H21. https://www.cnbc.com/2021/07/07/visa-says-crypto-linked-card-usage-tops-1-billion-in-first-half-of-2021.html
 
-  - TK
+  - Coinbase has plummeted in Apple's App Store rankings. ((Need link.))
 
-  - TK
+  - Analysis of recent VC investment in crypto. https://dovemountain.substack.com/p/dove-mountain-weekly-8
+
+  - Messari recap of 3q in crypto. https://messari.io/article/2q-21-currency-sector-recap
+
+  - NFT sales hit $2.5 billion in the first half. https://www.reuters.com/technology/nft-sales-volume-surges-25-bln-2021-first-half-2021-07-05/
+
+  - The Rusian hackers behind the Colonial Pipeline hack are back at it. https://news.sky.com/story/russian-speaking-hackers-claim-major-ransomware-attack-which-has-hit-hundreds-of-us-companies-12349018
+
+  - Alex Gladstein on BTC's potential to push the US back toward its founding principles of freedom. https://twitter.com/gladstein/status/1411690568954957826
+
+  - The newly formed Bitcoin Mining Council says more than half the energy used to mine btc globally comes from renewable sources. https://decrypt.co/75103/bitcoin-mining-council-report-clean-energy | Mining difficulty dropped 28% on Friday, the biggest decline in forever. https://twitter.com/SinoCrypto/status/1411218558999318530 | Marathon Digital reported a 17% increase in BTC production for June. https://www.coindesk.com/marathon-digital-reports-17-increase-in-bitcoin-production-for-june
+
+  - USDC is winning the stablecoin race, on track to pass Tether in market share. https://twitter.com/RyanWatkins_/status/1410013765727305735
+
+  - Amy Wu on the intersection of crypto and gaming. https://twitter.com/amytongwu/status/1411085093389537280
+
+  - Data journalist @JamesFransham of @TheEconomist has devised a "normality index" to quantify how everyday life is returning to its previous state (or not) now that #COVID19 pandemic is receding. https://www.youtube.com/watch?v=pFaGbtDJFwA
+
+  - NYT reports that there's an increasing schism between #Facebook's Zuckerberg & Sandberg over handling of Trump presidency & rise of misinformation. Hmmm... https://www.nytimes.com/2021/07/08/business/mark-zuckerberg-sheryl-sandberg-facebook.html | Meanwhile, antitrust regulators are concerned about the company's recent push into newsletters, apparently in an attempt to fend off competition from Substack. https://www.washingtonpost.com/technology/2021/07/06/facebook-bulletin-antitrust/
+
+  - The ex-chair of the CFTC says there should be a bitcoin ETF in the US. https://www.bloomberg.com/opinion/articles/2021-07-07/a-bitcoin-etf-would-be-good-for-investors-and-regulators?srnd=premium
+
+  - BofA launched a new crypto research team. https://www.bloomberg.com/news/articles/2021-07-08/bofa-debuts-cryptocurrencies-research-team-led-by-alkesh-shah
+
+  - Coinbase's interest rate on USDC sucks. https://www.coindesk.com/coinbase-rate-usdc-deposits-crypto-credit-risk
+
+  - ICYMI: Consensys published a handy roadmap to rollout of proof of stake on the Ethereum network. https://consensys.net/blog/blockchain-explained/charting-the-path-to-proof-of-stake-ethereum/?utm_content=172036694&utm_medium=social&utm_source=twitter&hss_channel=tw-3129477561
+
+  - Meltem D is joining the board of Topps. https://twitter.com/Melt_Dem/status/1413152839661244416
+
+  - The terminator are coming. https://www.washingtonpost.com/technology/2021/07/07/ai-weapons-us-military/
+
+  - Steve Ballmer became the world's 9th centibillionaire. https://www.bloomberg.com/news/articles/2021-07-07/steve-ballmer-becomes-ninth-member-of-the-100-billion-club
+
+  - Circle is going public. https://twitter.com/jerallaire/status/1413121938189344771
+
+  - Gen X trended on Twitter. https://twitter.com/zombiemom0101/status/1412272815177228288
+
+
 
 
   -->
