Adding story candidates from NYT & other orgs

--- a/newsletter/2021-07-25.html
+++ b/newsletter/2021-07-25.html
@@ -10,7 +10,21 @@
 
         - Musk confirms Spaxex is hodling bitcoin. ((Link TK))
 
+        - Robinhood expects to pay a $30m fine to ny state regulators. https://www.coindesk.com/robinhood-crypto-expects-to-pay-30m-fine-to-ny-state-regulatory-body
+
+        - BlockFi is having regulatory problems in NJ and several other states. https://www.forbes.com/sites/stevenehrlich/2021/07/19/new-jersey-attorney-general-prepares-cease-and-desist-order-against-multi-billion-dollar-bitcoin-financial-services-platform/?sh=44db5fb521a5&utm_source=TWITTER&utm_medium=social&utm_content=5194321362&utm_campaign=sprinklrForbesCrypto
+
+        - NYT op-ed on digital cash. https://www.nytimes.com/2021/07/22/opinion/cash-digital-currency-central-bank.html
+
+        - The chief U.S. regulator of credit unions wants more info on defi. https://www.coindesk.com/us-credit-union-regulator-wants-to-know-how-its-firms-handle-defi
+      
+        - JP Morgan opened access to several crypto funds for their clients. https://decrypt.co/76645/jp-morgan-wealth-clients-exposure-bitcoin-ethereum-funds
+
         - Turkey has a new crypto law in the works. https://www.coindesk.com/turkey-plans-to-present-law-on-cryptocurrencies-in-october-report
+
+        - Busta Rhymes is now a bitcoiner. https://twitter.com/BustaRhymes/status/1418210681812242442
+
+        - Slate on Bezos space launch. https://slate.com/technology/2021/07/bezos-blue-origin-resembles-penis-rocket-scientist-explains-why.html | Mock cover letter for Amazon blockchain job. https://twitter.com/acityinohio/status/1418704875026882563
 
 
 
