Adding some story candidates

--- a/newsletter/2021-08-01.html
+++ b/newsletter/2021-08-01.html
@@ -8,9 +8,33 @@
 
   - Bitcoin rallied over $40K for the first time since mid-June. It was boosted by a short squeeze + Amazon speculation. https://www.coindesk.com/bitcoin-climbs-past-40k | https://www.coindesk.com/podcasts/coindesk-podcast-network/are-amazon-rumors-behind-bitcoins-biggest-surge-in-months
 
+  - Shopify is going to allow merchants to sell NFTs on its platform. https://www.coindesk.com/shopify-to-allow-merchants-to-sell-nfts-directly-through-their-stores
+
+  - Amazon says it has no plans to accept bitcoin payments. ((Need CoinDesk link))
+
+  - The crypto markets could survive a tether collapse, writes David Z. Morris. ((Need CoinDesk link))
+
+  - Israel wants crypto investors to report earnings above $61K. https://www.coindesk.com/israeli-bill-would-force-crypto-investors-to-report-holdings-above-61k
+
+  - The US sanctioned a BTC address allegedly used by a Syrian terrorist. https://www.coindesk.com/us-sanctions-a-bitcoin-address-belonging-to-suspected-syria-based-terrorist-fundraiser
+
+  - Mexico took action against 12 crypto exchanges. ((Need CoinDesk link))
+
   - TK
 
   - TK
+
+  - TK
+
+  - TK
+
+  - TK
+
+  - TK
+
+  - TK
+
+
 
   -->
 
