Adding some links from WSJ, Forbes, and Reuters.

--- a/newsletter/2021-08-01.html
+++ b/newsletter/2021-08-01.html
@@ -20,9 +20,9 @@
 
   - Mexico took action against 12 crypto exchanges. ((Need CoinDesk link))
 
-  - TK
+  - Tech IPOs were mixed. Robinhood's IPO floundered. https://www.forbes.com/sites/jonathanponciano/2021/07/29/robinhood-ipo-stock-billionaire-ceo-defends-meme-stocks/?sh=13d133242411 | ...But Duolingo's was solid. https://www.reuters.com/technology/duolingo-valued-65-bln-shares-soar-debut-2021-07-28/
 
-  - TK
+  - Inca Digital says US users can easily evade rules against participating in certain overseas crypto exchanges. https://www.wsj.com/articles/u-s-crypto-traders-evade-offshore-exchange-bans-11627637401?mod=hp_lead_pos7
 
   - TK
 
