Adding some story links...

--- a/newsletter/2021-08-01.html
+++ b/newsletter/2021-08-01.html
@@ -4,7 +4,13 @@
 
   Some story candidates...
 
+  - Bitcoin rallied back above 40K. Microstrategy plans to buy more. https://www.coindesk.com/microstrategy-plans-to-continue-amassing-bitcoin | Bitcoin miners can avoid USA taxes by sending proceeds to IRAs. https://www.coindesk.com/bitcoin-miners-can-escape-u-s-taxes-by-mining-direct-to-iras
+
   - Bloomberg reports that Tether is under investigation for bank fraud. Yikes. https://www.bloomberg.com/news/articles/2021-07-26/tether-executives-said-to-face-criminal-probe-into-bank-fraud?utm_content=crypto&utm_campaign=socialflow-organic&utm_medium=social&utm_source=twitter&sref=3REHEaVI | On the bright side, USDT is maintaining its dollar peg nicely so far this week. https://www.coindesk.com/usdt-maintains-dollar-peg-as-traders-shrug-off-doj-tether-probe-report
+
+  - Comments from PayPal chief executive Dan Schulman during the payments firm's second-quarter earnings call on Wednesday indicate an accelerating focus on cryptocurrency tech. https://www.theblockcrypto.com/linked/112983/defi-smart-contracts-on-paypals-radar-as-payments-company-looks-to-expand-crypto-footprint
+
+  - New crypto bill in Congress. https://www.theblockcrypto.com/linked/112984/rep-beyer-introduces-far-reaching-framework-in-digital-asset-bill
 
   - Bitcoin rallied over $40K for the first time since mid-June. It was boosted by a short squeeze + Amazon speculation. https://www.coindesk.com/bitcoin-climbs-past-40k | https://www.coindesk.com/podcasts/coindesk-podcast-network/are-amazon-rumors-behind-bitcoins-biggest-surge-in-months
 
