Adding links from Bitcoinist, Decrypt, etc.

--- a/newsletter/2021-08-08.html
+++ b/newsletter/2021-08-08.html
@@ -8,14 +8,19 @@
 
   - Is tech making collaboration harder, not easier. ((Pickup NYT link to Manjoo column))
 
-  - tktk
-  - tktk
-  - tktk
-  - tktk
-  - tktk
-  - tktk
-  - tktk
+  - A new Apple plan to scan iPhones for child porn is raising privacy concerns for all users. https://www.washingtonpost.com/technology/2021/08/05/apple-child-pornography-iphone/ | EFF is pissed. https://www.eff.org/deeplinks/2021/08/apples-plan-think-different-about-encryption-opens-backdoor-your-private-life
+
+  - Burberry is branching into NFTs. https://bitcoinist.com/burberry-is-the-latest-designer-brand-to-branch-into-nfts/
+
+  - The US infrastructure bill may impose new reporting requirements on crypto exchanges. https://www.theblockcrypto.com/linked/113562/us-senate-crypto-tax-amendment-congress?utm_source=rss&utm_medium=rss | 
+
+  - Coinbase is acquiring crypto aggregator Zabo. https://www.theblockcrypto.com/post/113623/coinbase-zabo-acquisition-crypto-data-aggregator?utm_source=rss&utm_medium=rss
   
+  - Reddit Moons surpassed Dogecoin. https://bitcoinist.com/reddit-moons-now-worth-more-than-dogecoin-in-impressive-takeover/
+  
+  - SEC Chair Gary Gensler demurred when asked if ETH is a security. https://bitcoinist.com/secs-gary-gensler-crumbles-when-asked-if-ethereum-is-a-security/
+
+  - No one can find a $5,800 bottle of whisky Japan gifted to Mike Pompeo. I think I have an idea about where it might've gone... https://slate.com/news-and-politics/2021/08/japan-whisky-state-department-missing-pompeo.html
 
   - Well, that's an Olympic-sized downer. Fast Company points out that even Usain Bolt in his prime couldn't outrun a house cat. That's because, from a biomechanical standpoint, humans suck. https://www.wired.com/story/why-even-the-fastest-human-cant-outrun-your-house-cat/?bxid=5fdcba41bd64d61a9c00e19d&cndid=63217174&esrc=AUTO_PRINT&source=EDT_WIR_NEWSLETTER_0_DAILY_ZZ&utm_brand=wired&utm_campaign=aud-dev&utm_mailing=WIR_Daily_080321&utm_medium=email&utm_source=nl&utm_term=list1_p4
 
