Adding links re: Coinbase/Paxos spat

--- a/newsletter/2021-08-15.html
+++ b/newsletter/2021-08-15.html
@@ -8,7 +8,7 @@
 
   - CoinDesk reports that retail investors are piling back into BTC. https://www.coindesk.com/bitcoin-200-day-moving-average-retail-investors-prices-markets | Wow! Who knew! Oh, right... https://w3w.news/content/newsletter/2021-08-08.html
   
-  - tk 
+  - Coinbase and Paxos got into a pissing match about regulation of stablecoins. https://blog.coinbase.com/fact-check-usd-coin-is-the-largest-regulated-stablecoin-in-the-world-6e7f3c06cbf0 | https://www.paxos.com/a-regulated-stablecoin-means-having-a-regulator/
 
   - tk
   
