--- a/newsletter/2021-08-15.html
+++ b/newsletter/2021-08-15.html
@@ -4,23 +4,35 @@
 
   Some story candidates...
 
-  - A compromise the crypto industry wanted in the U.S. infrastructure bill failed. https://www.coindesk.com/podcasts/coindesk-podcast-network/infrastructure-bill-provision-tanked-shelby | Most of the industry was freaked, except for Raoul Pal, apparently. ((Pickup link from twitter))
+  - A compromise the crypto industry wanted in the U.S. infrastructure bill failed. https://www.coindesk.com/podcasts/coindesk-podcast-network/infrastructure-bill-provision-tanked-shelby | Most of the industry was freaked, except for Raoul Pal, apparently. ((Pickup link from twitter)) | Eshoo is asking Pelosi to update the House version of the legislation. https://www.coindesk.com/pelosi-ally-asks-us-house-speaker-to-modify-crypto-language-in-infrastructure-bill | spot story from decrypt. https://www.theblockcrypto.com/linked/114079/senate-passes-trillion-dollar-infrastructure-bill-with-unamended-crypto-tax-language
 
   - CoinDesk reports that retail investors are piling back into BTC. https://www.coindesk.com/bitcoin-200-day-moving-average-retail-investors-prices-markets | Wow! Who knew! Oh, right... https://w3w.news/content/newsletter/2021-08-08.html
+
+  - More money has flowed into stablecoins than municipal bonds so far in 2021. https://blockworks.co/more-capital-flowed-into-stablecoins-than-muni-bonds-in-2021/ | The largest stablecoin, Tether, is backed mostly by commercial paper, according to new data disclosed by the company behind it. https://www.coindesk.com/tether-reserves-details-attestation-commercial-paper | Circle wants to become a bank. https://www.theblockcrypto.com/linked/113875/circle-wants-to-become-a-bank-so-it-relies-less-on-third-party-partners
+
+  - Axie Infinity became the first NFT game to surpass $1 billion in sales. https://decrypt.co/78028/axie-infinity-becomes-ethereums-first-nft-game-to-hit-1-billion-in-sales
+
+  - Coinbase news: ETH trading surpassed BTC trading in Q@ on the exchange. https://decrypt.co/78231/coinbase-q2-earnings | 10 of the top 100 hedge funds use its platform. https://www.theblockcrypto.com/linked/114153/coinbase-hedge-fund-clients-earnings
   
   - Coinbase and Paxos got into a pissing match about regulation of stablecoins. https://blog.coinbase.com/fact-check-usd-coin-is-the-largest-regulated-stablecoin-in-the-world-6e7f3c06cbf0 | https://www.paxos.com/a-regulated-stablecoin-means-having-a-regulator/
 
-  - tk
+  - VC investment in crypto has already surpassed the 2020 level. https://www.marketsmedia.com/blockchain-and-crypto-vc-investment-overtakes-2020/
+
+  - Google fired dozens of employees for abusing user data. https://www.vice.com/amp/en/article/g5gk73/google-fired-dozens-for-data-misuse
   
-  - tk 
+  - Used cars have beaten the S&P 500. https://twitter.com/APompliano/status/1425598943677894662
 
-  - tk
-   
-  - tk 
+  - The Ethereum network has now burned over $100 million tokens since the London upgrade. https://www.theblockcrypto.com/post/114334/ethereum-network-burns-100-million-of-eth-in-first-week-after-london-upgrade
 
-  - tk
+  - NYT story on historians reconstructing the Stasi's spying on citizens. https://www.nytimes.com/2021/08/10/arts/design/stasi-archive-puzzle.html
  
-  - ((pickup links from Twitter @web3weekly and @peteramckay))
+  - Linux's marketing problem: https://hackaday.com/2019/10/31/linuxs-marketing-problem/
+
+  - Messi's new contract includes provisions to create new "fan tokens." https://www.reuters.com/lifestyle/sports/exclusive-messis-paris-st-germain-package-includes-crypto-fan-tokens-2021-08-12/
+
+  - A platform-driven podcast nightmare: https://twitter.com/hondanhon/status/1423476490063147010
+ 
+  - The last word that ever needs to be said about nerdfights over tokens. https://twitter.com/LayahHeilpern/status/1423310906415538179
 
   -->
 
