Adding a bunch of links to this draft

--- a/newsletter/2021-09-19.html
+++ b/newsletter/2021-09-19.html
@@ -1,24 +1,5 @@
 <!doctype html>
 
-
-<!--
-
-Some story candidates...
-
-- The Wall Street Journal detailed Facebook's preferential treatment of certain famous users who abused the platforms terms of service in ways Average Joes couldn't get away with. https://www.wsj.com/articles/facebook-files-xcheck-zuckerberg-elite-rules-11631541353?mod=searchresults_pos1&page=1
-
-- MailChimp employees won't see a windfall from the company's sale to Intuit. https://werd.io/2021/mailchimp-an-inequitous-acquisition
-
-- New data on U.S. inflation left bitcoiners gloating. ((Pickup Pomp video)) | https://www.washingtonpost.com/business/2021/09/14/august-inflation/
-
-- NYT essay: "Bitcoin cosplay is getting real." https://www.nytimes.com/2021/09/14/opinion/bitcoin-el-salvador.html
-
-- Nobody wants to be a serf anymore. https://www.wsj.com/articles/facebook-files-xcheck-zuckerberg-elite-rules-11631541353?mod=searchresults_pos1&page=1
-
-
-
--->
-
 <html lang="en">
 
   <head>
@@ -86,12 +67,69 @@ Some story candidates...
 
         <p>The latest headlines about decentralization:</p>
 
+
         <ul>
 
-          <li><strong></strong><!-- --></li>
-          <li><strong></strong><!-- --></li>
-          <li><strong></strong><!-- --></li>
-          <li><strong></strong><!-- --></li>
+          <li><strong>Big Tech's privacy woes multiplied.</strong><!--             - The Wall Street Journal detailed Facebook's preferential treatment of certain famous users who abused the platforms terms of service in ways Average Joes couldn't get away with. https://www.wsj.com/articles/facebook-files-xcheck-zuckerberg-elite-rules-11631541353?mod=searchresults_pos1&page=1
+
+                      - Apple unveiled a major security flaw.
+
+  --></li>
+
+          <li><strong>Protonmail controversey</strong><!-- Protonmail controversey: https://www.swissinfo.ch/eng/protonmail-scandal-tarnishes-swiss-privacy-reputation-/46952640 | https://www.wired.com/story/protonmail-amends-policy-after-giving-up-activists-data/ --></li>
+
+          <li><strong>The Bitcoin network has already consumed more power this year than in all of 2021.</strong><!--
+
+https://decrypt.co/80897/bitcoin-energy-consumption-year-already-more-2020
+
+hash rate up: https://www.theblockcrypto.com/post/117267/bitcoin-mining-hash-rate-recovery-summer-crash
+
+Canaan profits way up: https://www.theblockcrypto.com/linked/117734/canaan-nets-record-bitcoin-miner-sales-with-167-million-in-q2
+
+                     - New data on U.S. inflation left bitcoiners gloating. ((Pickup Pomp video)) | https://www.washingtonpost.com/business/2021/09/14/august-inflation/
+
+                    - NYT essay: "Bitcoin cosplay is getting real." https://www.nytimes.com/2021/09/14/opinion/bitcoin-el-salvador.html
+
+                    https://www.theblockcrypto.com/linked/117527/latest-version-of-open-source-bitcoin-core-software-released
+ --></li>
+
+          <li><strong>Ethereum founder Vitalik Buterin made the Time 100 list of the world's most influential people.</strong><!-- https://time.com/collection/100-most-influential-people-2021/6095980/vitalik-buterin/
+
+
+          --></li>
+
+          <li>Solana suffered an embarrassing network outage. <!-- https://twitter.com/SolanaStatus/status/1437856638279487493--></li>
+
+          <li>Cardano added smart contracts. <!-- https://iohk.io/en/blog/posts/2021/09/12/today-will-feel-like-a-destination-yet-a-new-exciting-journey-begins/ --></li>
+
+          <li><strong>Virginia's public pension fund is looking to invest in crypto.</strong><!-- https://decrypt.co/80695/virginia-public-pension-funds-double-down-bitcoin --></li>
+
+          <li><strong>The Washington Post</strong><!-- WaPo profiled a Detroit professor who studies the intersection between surveillance capitalism and race. https://www.washingtonpost.com/technology/2021/09/16/chris-gilliard-sees-digital-redlining-in-surveillance-tech/
+ --></li>
+
+
+          <li><strong>MailChimp was sold to Intuit.</strong><!--           - MailChimp employees won't see a windfall from the company's sale to Intuit. https://werd.io/2021/mailchimp-an-inequitous-acquisition
+ --></li>
+
+          <li><strong>Nobody wants to be a serf anymore.</strong><!--  - Nobody wants to be a serf anymore. https://www.wsj.com/articles/facebook-files-xcheck-zuckerberg-elite-rules-11631541353?mod=searchresults_pos1&page=1
+ --></li>
+
+          <!--
+
+          The cutting room floor. Left these out due to space constraints...
+
+
+          - Space as an innovation frontier. https://www.informationweek.com/executive-insights-and-innovation/space-the-next-tech-industry-frontier-
+
+
+
+
+
+
+
+          -->
+
+
 
         </ul>
 
