--- a/newsletter/2021-10-10.html
+++ b/newsletter/2021-10-10.html
@@ -1,20 +1,5 @@
 <!doctype html>
 
-<!--
-
-Some story candidates...
-
-- A lot of Facebook news breaking... NYT's Roose: FB is weaker than we think.https://www.nytimes.com/2021/10/04/technology/facebook-files.html | 60 Minutes segment | Company statement in response | Congressional testimoney by the whistleblower. | Outage.
-
-- The US is inching closer to new rules on stablecoins. https://www.coindesk.com/policy/2021/10/05/the-us-inches-closer-to-stablecoin-rules/ | Gensler remarks to Congress on crypto. https://www.coindesk.com/policy/2021/10/05/sec-chair-gensler-a-ban-on-crypto-would-be-up-to-congress/
-
-- Nobel in medicine awarded to team whose research could lead to new pain treatments. https://www.washingtonpost.com/health/2021/10/04/nobel-prize-medicine-julius-patapoutian/
-
-- https://www.armytimes.com/news/your-army/2021/10/01/special-ops-soldiers-evade-late-night-ninja-attack-at-california-airport/
-
-
--->
-
 <html lang="en">
 
   <head>
@@ -79,6 +64,52 @@ Some story candidates...
         <h4>Oct. 3-9, 2021</h4></span>
 
         <br>
+
+        <!--
+
+        - Big institutions are inadvertently providing great proof of why we need the decentralized web right now. 
+
+        - A lot of Facebook news breaking... NYT's Roose: FB is weaker than we think.https://www.nytimes.com/2021/10/04/technology/facebook-files.html | 60 Minutes segment | Company statement in response | Congressional testimoney by the whistleblower. | Outage on Monday. |Some of FB's audience metrics are BS, according to SEC complaint. https://arstechnica.com/tech-policy/2021/10/facebook-misled-investors-about-shrinking-user-base-ex-employee-alleges/ | An ex-FB data scientist came forward as well, wrote an NYT op-ed advocating the company be regulated through 230 reform. https://www.nytimes.com/2021/10/06/opinion/facebook-whistleblower-section-230.html | Stoller: You can't separate FB's bad practices from their monopolistic market position. https://mattstoller.substack.com/p/the-facebook-whistleblower-is-heroic
+
+        - Bitcoin reclaimed the $50K milestone and a $1 trillion market cap. https://www.theblockcrypto.com/linked/119651/bitcoins-market-cap-is-back-above-1-trillion | Miners are now making $40M a day. https://decrypt.co/82551/bitcoin-miners-are-making-40m-per-day | El Salvador began mining bitcoin using volcano power. https://www.theblockcrypto.com/post/119215/el-salvador-has-started-mining-bitcoin-with-volcanos
+
+        - The Korean exchange Kucoin is booting users from China's mainland. https://decrypt.co/82493/kucoin-latest-crypto-exchange-to-boot-chinese-mainlanders
+
+        - Hong Kong is studying a CBDC. https://www.theblockcrypto.com/post/119389/hong-kong-hkma-technical-whitepaper-retail-cbdc
+
+        - Coinbase suffered a phishing attack. THe exchange said it will make users whole, though. https://decrypt.co/82427/coinbase-hack-phishing | https://www.coindesk.com/business/2021/10/01/coinbase-multi-factor-authentication-hack-affects-at-least-6000-customers/
+
+        - Wall Street adoption: US Bank is now offering crypto custody. https://decrypt.co/82686/us-banking-bitcoin-custody-services-bitcoin | Bank of America launched its crypto research. https://www.prnewswire.com/news-releases/bofa-global-research-launches-coverage-of-digital-assets-301391753.html | Citadel Securities says it's not trading crypto due to regulatory uncertainty. https://www.reuters.com/business/citadel-securities-avoids-crypto-due-regulatory-uncertainty-founder-2021-10-04/ | Societe Generale applied for a $20M MakerDAO loan. https://www.coindesk.com/business/2021/09/30/societe-generale-applies-for-20m-makerdao-loan-using-bond-token-collateral/
+
+        - The Fed is about to begin a formal process of studying whether to launch a digital dollar, including public comment. https://www.wsj.com/articles/fed-prepares-to-launch-review-of-possible-central-bank-digital-currency-11633339800
+
+        - A Fed report said cryptocurrencies could dent the international influence of USD. https://www.federalreserve.gov/econres/notes/feds-notes/the-international-role-of-the-u-s-dollar-20211006.htm
+
+        - Regulatory news: DOJ is creating a new crypto enforcement team. https://decrypt.co/82794/doj-cryptocurrency-enforcement-group | FDIC is studing whether to insure stablecoin deposits. https://www.coindesk.com/policy/2021/10/06/us-fdic-said-to-be-studying-deposit-insurance-for-stablecoins/ | The SEC subpoenaed Circle. https://www.coindesk.com/business/2021/10/05/sec-subpoenas-usdc-stablecoin-backer-circle/ |  A16Z suggested a framework. https://a16z.com/2021/10/05/our-proposals-to-the-senate-banking-committee/ | Gensler says SEC won't ban crypto. https://www.coindesk.com/policy/2021/10/05/sec-chair-gensler-a-ban-on-crypto-would-be-up-to-congress/ | Biden admin is looking to banking regulations to address stablecoins. https://www.theblockcrypto.com/linked/119317/biden-team-is-looking-to-bank-regulation-to-solve-the-stablecoin-question
+
+        - Brazil is studying whether to legalize bitcoin payments. https://decrypt.co/82675/brazilian-lawmaker-bitcoin-legal-payment-currency
+
+        - NFT sales surged to $10.7 billion in Q3. https://www.reuters.com/technology/nft-sales-surge-107-bln-q3-crypto-asset-frenzy-hits-new-highs-2021-10-04/ | Shaq is launching his own line of NFTs. https://www.coindesk.com/business/2021/10/04/shaq-to-release-nft-collection/ | A Solana-based NFT sold for a record $2.1M. https://www.theblockcrypto.com/linked/119354/solana-nft-sells-for-2-1-million-breaking-previous-network-record
+
+        - Decrypt took a look at what the infrastructure bill's recent stall means for crypto. https://www.theblockcrypto.com/post/119406/two-massive-bills-are-in-congressional-limbo-heres-what-that-means-for-crypto
+
+        - Mirror, an Ethereum-based publishing platform, opened to the public. https://decrypt.co/82703/ethereum-based-blogging-platform-mirror-opens-up-to-everyone
+
+        - MoneyGram is partnering with Stellar and USDC on blockchain payments. https://www.coindesk.com/business/2021/10/06/moneygram-partners-with-stellar-and-usdc-for-blockchain-based-payments/
+
+        - The US is inching closer to new rules on stablecoins. https://www.coindesk.com/policy/2021/10/05/the-us-inches-closer-to-stablecoin-rules/ | Gensler remarks to Congress on crypto. https://www.coindesk.com/policy/2021/10/05/sec-chair-gensler-a-ban-on-crypto-would-be-up-to-congress/
+
+        - NYT's Coy writes that the Fed's trillion-dollar coin ploy may highlight the arbitrary nature of money in general. You know, something bitcoiners point out all the time. https://www.nytimes.com/2021/10/06/opinion/trillion-dollar-coin.html | My thread on the issue: https://twitter.com/peteramckay/status/1446073797409398786
+
+        - Nobel in medicine awarded to team whose research could lead to new pain treatments. https://www.washingtonpost.com/health/2021/10/04/nobel-prize-medicine-julius-patapoutian/
+
+        - Audiobooks are awesome, writes NYT's Manjoo. https://www.nytimes.com/2021/10/06/opinion/audiobooks-better-than-reading.html
+
+        - A ninja attacked two US Army Special Forces soldiers. A little off-topic but just sayin'... WTF? https://www.armytimes.com/news/your-army/2021/10/01/special-ops-soldiers-evade-late-night-ninja-attack-at-california-airport/
+
+
+        -->
+
 
         <p>The latest: </p>
 
